tests/spec/build/snapshots/user_marshal_json_lowers_to_go_abi_shape.snap
---
source: tests/spec/build/mod.rs
---
// === main.go ===
package main

import (
	"encoding/json"
	"fmt"
)

type Widget struct {
	id int
}

func (w Widget) MarshalJSON() ([]uint8, error) {
	return ([]uint8)("\"custom\""), nil
}

func main() {
	w := Widget{id: 7}
	ret_1, e := json.Marshal(w)
	if e == nil {
		b := ret_1
		fmt.Println(string(b))
	} else {
		fmt.Println(e)
	}
}
