tests/spec/build/snapshots/user_read_lowers_partial_to_io_reader.snap
---
source: tests/spec/build/mod.rs
---
// === main.go ===
package main

import "io"

type Reader struct{}

func (r Reader) Read(_ []uint8) (int, error) {
	return 0, io.EOF
}

func useReader(r io.Reader) int {
	_ = r
	return 0
}

func main() {
	r := Reader{}
	useReader(r)
}
