tests/spec/build/snapshots/user_strings_alias_preserved_alongside_generated_import.snap
---
source: tests/spec/build/mod.rs
---
// === main.go ===
package main

import (
	"strings"
	s "strings"
)

func main() {
	s.ToUpper("abc")
	strings.Contains("abc", "a")
}
