tests/spec/build/snapshots/user_text_marshaler_skips_adapter.snap
---
source: tests/spec/build/mod.rs
---
// === main.go ===
package main

type Widget struct {
	id int
}

func (w Widget) MarshalText() ([]byte, error) {
	return ([]byte)("custom"), nil
}

func main() {
	w := Widget{id: 7}
	_ = w
}
