tests/spec/build/snapshots/write_only_mut_local_emits_blank_identifier_to_avoid_unused_var_error.snap
---
source: tests/spec/build/mod.rs
---
// === main.go ===
package main

func main() {
	_ = 0
	_ = 1
}
