tests/spec/build/snapshots/write_only_mut_param_keeps_name_in_codegen_via_index_write.snap
---
source: tests/spec/build/mod.rs
---
// === main.go ===
package main

func indexWrite(items []int) {
	items[0] = 99
}

func main() {
	data := []int{1, 2, 3}
	indexWrite(data)
}
