tests/spec/build/snapshots/write_only_mut_param_keeps_name_in_codegen_via_reassignment.snap
---
source: tests/spec/build/mod.rs
---
// === main.go ===
package main

func reassignOnly(items []int) {
	items = []int{99, 99, 99}
}

func main() {
	data := []int{1, 2, 3}
	reassignOnly(data)
}
