tests/spec/build/snapshots/wrong_signature_stringer_surfaces_duplicate_method_error.snap
---
source: tests/spec/build/mod.rs
---
// === main.go ===
package main

import "fmt"

type A struct {
	a string
}

func (a A) String() string {
	return fmt.Sprintf("A { a: %v }", a.a)
}

func (a A) String() int {
	return 42
}

func main() {
	a := A{a: "x"}
	fmt.Println(a)
}
